# vcpkg

./: .gitignore  THIS-FORK.md  set-rpath.sh  vcpkg.json
custom-triplets/: x64-linux-dynamic.cmake
ports/hdf5/: portfile.cmake
ports/pcre2/: portfile.cmake  vcpkg.json
ports/python3/: portfile.cmake  portfile.cmake.bak  vcpkg.json  vcpkg.json.bak
ports/qt5-webengine/: build_4.patch  build_5.patch  build_6.patch  build_7.patch  build_8.patch  build_9.patch  portfile.cmake
sample/boost/: CMakeLists.txt  build-sample.bat  main.cpp
sample/http/: .gitignore  CMakeLists.txt  build-sample.bat  build-sample.sh  http_py11.cpp  httpwindow.cpp  main.cpp  run.bat  run.sh  test.py
scripts/toolchains/: linux.cmake
versions/: baseline.json
versions/h-/: hdf5.json
versions/p-/: pcre2.json  python3.json
